--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     </div>
 
     <script>
-        const SERVER_URL = "https://twoliowebbot-production.up.railway.app/chat";
+        const SERVER_URL = "https://9634-2a09-bac5-5040-18d2-00-279-3c.ngrok-free.app/chat";
 
         const userData = {
             id: 15,
